# DOEngine

./: .clang-format  .gitignore  .gitmodules  2D-engine.make  Arkanoid.cpp  Arkanoid.h  BlockObject.cpp  BlockObject.h  CMakeLists.txt  CMakeListsold.txt  DOEngine.sln  DOEngine.vcxproj  DOEngine.vcxproj.filters  Dockerfile  DoodleJump.cpp  DoodleJump.h  DrawableMatrix.h  Event.cpp  Event.h  GeometricRender.cpp  GeometricRender.h  Makefile  Map.cpp  Map.h  Object.h  README.md  Requisites.md  SnakeState.cpp  SnakeState.h  Sprite.cpp  Sprite.h  StateMachine.cpp  StateMachine.h  Texture.cpp  Texture.h  UDP.cpp  UDP.h  Vector2d.h  Window.cpp  Window.h  (+13 more)
android/: .gitignore  CMakeLists.txt  CMakeLists_prev.txt  build-android-2.sh  build-android.sh
android/boiler-plate-gen/: generator.sh  selectable-gen.sh
cmake-module/: IncludeSourceCode.cmake  MergeStaticLibraries.cmake  assets.cmake  cmake_option_and_set.cmake  compiler_flags.cmake  install.cmake  (+8 more)
sample/: CMakeLists.txt  CanvasTestState.cpp  CanvasTestState.h  MainMenuState.cpp  MainMenuState.h  MatrixTestState.h  Music.cpp  RawBattle.cpp  SortedState.cpp  Sound.cpp  TestState.h  TileMapTestState.cpp  TileMapTestState.h  Window.cpp  ignored_main.cpp  ignored_main_template.cpp  main.cpp  ttfwrapp.cpp
sample/BattleCityRecreation/: BattleCityRecreation.cpp
sample/BattleSpawn/: BattleSpawn.cpp  BattleSpawn_ok.cpp  BattleSpawn_with_Selection_added.cpp
sample/Collector/: CMakeLists.txt  main.cpp
sample/MusicPlayer/: MusicPlayer.cpp
sample/Pacman/: Pacman.cpp
sample/Particles/: CMakeLists.txt  Particles.cpp
sample/SDL2O/: SDL2O.cpp
sample/SideScroller/: SideScroller.cpp
sample/SnakeGame/: CMakeLists.txt  SnakeGame.cpp
sample/SpaceInvader/: SpaceInvader.cpp
sample/SpriteSelectorRect/: CMakeLists.txt  SpriteSelectorRect.cpp  constants.h
sample/Sprites/: CMakeLists.txt  Sprites.cpp
sample/VideoPlayer/: CMakeLists.txt  VideoPlayer.cpp
sample/old_projects/: CanvasTestState.cpp  TileMapTestState.h
sample/old_projects/Код с примеров на видео/: main.cpp
sample/pong/: SimplePong.cpp
sample/tetris/: Tetris.cpp
sample/проект Visual Studio 2010/ssssss/: main.cpp
src/: .gitignore  Animation.h  Arkanoid.cpp  Arkanoid.h  BlockObject.cpp  BlockObject.h  CMakeLists.txt  DevState.h  DoodleJump.h  Event.cpp  Event.h  GeometricRender.cpp  GeometricRender.h  Map.cpp  Map.h  Object.h  SnakeState.cpp  SnakeState.h  Sprite.cpp  Sprite.h  StateMachine.cpp  StateMachine.h  Texture.cpp  Texture.h  UDP.cpp  UDP.h  Vector2d.h  Window.cpp  Window.h  app.h  build.sh  configure.sh  coverage.sh  doengine  game  gm1  main.cpp  makefile  onelonecoder.cpp  test
src/Application/: Application.cpp  GameState.cpp  Geometric.cpp  Logger.cpp  OpenglLoader.cpp  SDLOpenglRenderer.cpp  SDLOpenglRenderer.h  SDLOpenglWindow.cpp  SDLOpenglWindowManager.h  SDLRenderer.cpp  SDLRenderer.h  SDLTTFText.cpp  SDLTTFText.h  SDLTexture.cpp  SDLTexture.h  SDLWindowManager.cpp  SDLWindowManager.h  StringUtils.cpp  Timer.cpp  WindowManager.cpp  opengl_decls.cpp  opengl_decls.h
src/Drawable/: Canvas.cpp  Draggable.cpp  DraggableGameObject.cpp  GameObject.cpp  Geometric.cpp  Geometric.h  Gui.cpp  MessageBox.cpp  PrimitiveGraphics.cpp  SDLRenderer.cpp  SelectionRect.cpp  Sprite.h  TextField.cpp  UI.cpp
src/Event/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  SDLJoypad.cpp  SDLKeyboard.cpp  SDLMouse.cpp
src/Font/: FontCache.cpp  TTFText.cpp  TTFText.h
src/GameObject/: BackgroundObject.cpp  BackgroundObject.h  GameObject.cpp  GameObject.h
src/GameState/: AsteroidState.cpp  AsteroidState.h  Bejweeled.cpp  Bejweeled.h  ConwayState.cpp  ConwayState.h  GameState.h  GameStateManager.cpp  GameStateManager.h  Hanoi.cpp  Hanoi.h  OneLoneCodeTetrisState.h  PlatformState.cpp  TestState.cpp  tetrisState1.cpp
src/Music/: SDLMusicHandler.cpp  SDLSoundHandler.cpp
src/Network/: UDPPacket.cpp  UDPPacket.h
src/Texture/: Sprite.cpp  Texture.cpp  Texture.h
src/Tilemap/: Tile.h  TileMapEditor.cpp  Tilemap.cpp  Tilemap.h
src/Timer/: FPSManager.cpp  FPSManager.h
src/Ui/: Menus.cpp
src/Window/: Window.cpp  Window.h
src/algorithm/: sort.cpp  sort.h
src/cmake-module/: CodeCoverage.cmake
src/includes/: BackgroundObject.h  Camera.h  Canvas.h  CanvasTestState.h  DOEngine.h  DOEngine_SDL_includes.h  Event.h  EventHandler.h  FPSManager.h  GameObject.h  GameState.h  GameStateManager.h  Geometric.h  Grids.h  Gui.h  LinkList.h  MainMenuState.h  MatrixTestState.h  Menu.h  MusicHandler.h  Particle.h  PlatformState.h  PrimitivesGraphics.h  SDLRenderer.h  SortedState.h  Sprite.h  StandardFuncs.h  TTFText.h  TestState.h  Texture.h  Tile.h  Tilemap.h  UDPPacket.h  Vector.h  Window.h  defines.h  v2d_vector.h
src/includes/abstract/: AbstractWindow.h  EventHandler.h  Font.h  Renderer.h
src/old_state/: DoodleJump.cpp  onelonecoder.h
src/res/: AStart.h
src/sample/: CanvasTestState.cpp  MainMenuState.cpp  MatrixTestState.cpp  MatrixTestState.h  SortedState.cpp  SortedState.h  TileMapTestState.cpp  Window.cpp  Window.h
src/test/: .gitignore  CMakeLists.txt  testmain.cpp
src/test/fixtures/: DoEngineFixture.h
src/test/mocks/: AbstractWindowMock.h  CameraMock.h  EventHandlerMock.h  FPSManagerMock.h  FontMock.h  GameObjectMock.h  GameStateManagerMock.h  JoypadMock.h  MouseMock.h  MusicHandlerMock.h  ParticleMock.h  RendererMock.h  SDLMock.cpp  SDLMock.h  TimerMock.h  UDPPacketMock.h
src/test/units/: utApplication.cpp  utEventHandler.cpp  utEvents.cpp  utFPSManager.cpp  utGameStateManager.cpp  utLinkList.cpp  utSDLJoypad.cpp  utSDLKeyboard.cpp  utSDLMouse.cpp  utUtils.cpp
test/: CMakeLists.txt  testmain.cpp
test/fixtures/: DoEngineFixture.h
test/mocks/: AbstractWindowMock.h  CameraMock.h  EventHandlerMock.h  GameStateManagerMock.h  GameStateMock.h  MusicHandlerMock.h  NativeStructsMock.h  ParticleMock.h  RendererMock.h  SDLMock.cpp  SDLMock.h
test/mocks/include/: SDLtest.h
test/units/: utApplication.cpp  utCircularArray.cpp  utEventHandler.cpp  utFPSManager.cpp  utGameStateManager.cpp  utLinkList.cpp  utSDLMouse.cpp  utSprite.cpp  utSpriteOffset.cpp
(+91 files in other folders)
