cmake_minimum_required(VERSION 3.22.1)

project(VideoPlayer)

include_directories(DOSAMPLE PRIVATE ../../includes)
include_directories(MUSIC_SAMPLE PRIVATE ../../includes)

add_executable(VideoPlayer
    VideoPlayer.cpp
)

file(COPY ${ASSETS_DIR}
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# sudo apt install libsdl2-dev libavcodec-dev libavformat-dev libavutil-dev libswscale-dev
target_link_libraries(VideoPlayer PRIVATE
    doengine
    SDL2-static
    SDL2_image
    SDL2_ttf
    SDL2_mixer
    avformat 
    avcodec 
    avutil 
    swscale
)
